tests/loops/invalid/syntax_err_too_few_for_clauses.amu
s32 main() {
    for (s32 i = 2; i < 3)
        3;
    return 0;
}